...
          tabBarIcon: ({ color }) => <IconeSvg path={icones.tabDespensa} cor={String(color)} />,
        }}
      />
      <Tabs.Screen
        name="lista"
        options={{
          title: 'Lista',
          tabBarIcon: ({ color }) => <IconeSvg path={icones.tabLista} cor={String(color)} />,
        }}
      />
      <Tabs.Screen
        name="resumo"
        options={{
          title: 'Resumo',
          tabBarIcon: ({ color }) => <IconeSvg path={icones.tabResumo} cor={String(color)} />,
        }}
      />
      <Tabs.Screen
        name="configuracoes"
        options={{
...
